somewhat working version

--- a/app/src/main/res/layout/activity_update_device.xml
+++ b/app/src/main/res/layout/activity_update_device.xml
@@ -10,12 +10,10 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
         android:text="Gerät bearbeiten"
         android:textSize="30sp"
         app:layout_constraintBottom_toTopOf="@+id/deviceTitle"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -28,9 +26,17 @@
         android:inputType="textPersonName"
         app:layout_constraintBottom_toTopOf="@+id/deviceCategory"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
+
+    <Spinner
+        android:id="@+id/deviceCategory"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toTopOf="@+id/deviceSerial"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/deviceTitle" />
 
     <EditText
         android:id="@+id/deviceSerial"
@@ -41,9 +47,18 @@
         android:inputType="textPersonName"
         app:layout_constraintBottom_toTopOf="@+id/deviceOwner"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/deviceCategory" />
+
+    <ListView
+        android:id="@+id/deviceOwner"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:choiceMode="singleChoice"
+        app:layout_constraintBottom_toTopOf="@+id/deviceDescription"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/deviceSerial" />
 
     <EditText
         android:id="@+id/deviceDescription"
@@ -55,7 +70,6 @@
         android:inputType="textMultiLine"
         app:layout_constraintBottom_toTopOf="@+id/button"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/deviceOwner" />
 
@@ -63,29 +77,11 @@
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="32dp"
         android:onClick="updateDevice"
         android:text="Aktualisieren"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/deviceDescription" />
-
-    <Spinner
-        android:id="@+id/deviceCategory"
-        android:layout_width="409dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toTopOf="@+id/deviceSerial"
-        app:layout_constraintTop_toBottomOf="@+id/deviceTitle"
-        tools:layout_editor_absoluteX="1dp" />
-
-    <Spinner
-        android:id="@+id/deviceOwner"
-        android:layout_width="409dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toTopOf="@+id/deviceDescription"
-        app:layout_constraintTop_toBottomOf="@+id/deviceSerial"
-        tools:layout_editor_absoluteX="1dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
